# Barry1

./: .gitignore  .pyre_configuration  ASCII_Art.md  Abbreviations.md  Acronyms.tex  BastiBibliography.bib  CD ripping burning and mp3.md  Chrome OS Flex.md  DNS.md  FullGlossary.tex  Glossary.tex  HotelBuchungsInfos.md  Kreditrechnung.md  LinuxGeneral.md  LinuxTools.md  Makefile  Moderationstechniken.md  NetworkKnowHow.md  PortableWorkingInsufficientRights.md  PythonPackages.md  QNAP_NAS.md  README.md  SUMMARY.md  Sprichworte.md  WSL.md  fonts.md  git_hub.md  internetworking.md  linuxtools.md  package-lock.json  pdf_processing.md  pyproject.toml  pythonpackages.md  systemtools.md  trunk.io.md  windowshints.md  wsl.md
.github/workflows/: markdownlint.yml  snake.yml  super-linter.yml
.trunk/: trunk.yaml
LinuxSetup/: .conkyrc  3rdParty.md  Backporting_before_Pinning.md  BastiPinningPreferences.pref  Container.md  Debian12to13.md  Makefile  backportme.sh  bpo_stable.pref  conky.desktop  conky.md  etc_sudoers.d_ebeling  firmwarei915.sh  kernel.md  modules.md  my.bashrc  onedrive.md  poetry_inst.sh  pytest_inst.sh  sources.list  teams.md
LinuxSetup/sources.list.d/: kova.sources
RegistryPatches/: Add_Run_with_priority.reg  MRU_Folder_Outlook16.reg  TimeServer.reg  Windows_Version_on_Desktop.reg
Windows/: InstMany.cmd  Software.md  SystemEinstellungen.md  Trunk4Win.ps1  WinUpd.ps1  pullall.bat
config_templates/: .pyre_configuration
hooks/: pre-commit
python_helpers/: Makefile  easy_renice.py  place_by_exiftag.py  place_by_exiftag_py2.py  place_whatsapp_media.py  pyproject.toml  unlockxlsx.py
shell_helpers/: buildrollingstablekernel.sh  cd_dvd_rom2ISO.sh  cleanuptrunk.sh  dmesgfilt.sh  download_pip_wheel_win64.sh  dpkgiurl.sh  exifls.sh  extractCD2WAV.sh  freshclamebelnas.sh  getpythonsrccompile.sh  instpoetry.sh  merge_gist_into_git.sh  myFotoArrange.sh  mydmesg.sh  mypstree.sh  pandocmdpdf.sh  parpullall.sh  pdf2png.sh  pdf2trans_png.sh  pdfoptebook.sh  pdfoptprinter.sh  pdfoptscreen.sh  pdftofaxtiff.sh  picrename.sh  prettycheckpy.sh  pullall.sh  pyenvup.sh  recursive_parallel_poetry.sh  recursive_poetry.sh  recursive_serial_poetry.sh  removepdfpass.sh  resize4MPix.sh  rtme.sh  rtrunning.sh  sign_Auslandsstart.sh  sign_Schautanzantrag.sh  sign_Turnieranmeldung.sh  sign_WR-C.sh  signpdf.sh  speedup.sh  (+4 more)
